# galculator

./: .tm_project.cache  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  galculator.appdata.xml.in  galculator.desktop.in  galculator.prj  galculator.pws  galculator.spec.in  intltool-extract  intltool-merge  intltool-merge.in  intltool-update  intltool-update.in
.xvpics/: 1dot.xpm
autom4te.cache/: output.0  requests  traces.0
doc/: Makefile.am  Makefile.in  galculator.1  shortcuts
pixmaps/: Makefile.am  Makefile.in
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  README.Translation  am.po  ar.po  be.po  bg.po  ca.po  cs.po  da.po  da_DK.po  de.gmo  de.po  el.po  en_AU.po  en_GB.po  es.po  es_MX.po  et.po  eu.po  fi.po  fr.gmo  fr.po  galculator.pot  gl.po  hr.po  hu.po  id.po  it.po  ja.gmo  ja.po  kk.po  kk_KZ.po  ko.po  lt.po  mr.po  ms.po  nl.po  (+17 more)
src/: Makefile.am  Makefile.in  calc_basic.c  calc_basic.h  callbacks.c  callbacks.h  config_file.c  config_file.h  display.c  display.h  flex_parser.h  flex_parser.l  g_real.h  galculator.h  general_functions.c  general_functions.h  main.c  math_functions.c  math_functions.h  parser.c  parser.h  ui.c  ui.h
trunk/galculator/: .tm_project.cache  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  galculator.desktop.in  galculator.prj  galculator.pws  intltool-extract  intltool-extract.in  intltool-update
trunk/galculator/.tx/: config
trunk/galculator/autom4te.cache/: output.0  requests  traces.0
trunk/galculator/doc/: Makefile.am  Makefile.in  calc_basic_internal  galculator.1  shortcuts
trunk/galculator/pixmaps/: Makefile.in
trunk/galculator/po/: LINGUAS  POTFILES.in  README.Translation  da_DK.po  de.gmo  de.po  el.po  es.po  es_MX.po  fr.gmo  fr.po  galculator.pot  hu.po  id.po  ja.gmo  ja.po  kk.po  lt.po  pl.gmo  pl.po  pt.po  pt_BR.gmo  pt_BR.po  ro.gmo  ro.po  ru.po  sk.po  sv.po  tr.po  zh_CN.po  zh_TW.po
trunk/galculator/src/: Makefile.am  Makefile.in  calc_basic.c  calc_basic.h  callbacks.c  callbacks.h  config_file.c  config_file.h  display.c  display.h  flex_parser.h  flex_parser.l  g_real.h  galculator.h  general_functions.c  general_functions.h  main.c  math_functions.c  math_functions.h  parser.c  parser.h  ui.c  ui.h
trunk/galculator/ui/: Makefile.am  Makefile.in  about.ui.in  basic_buttons.glade  basic_buttons.ui  basic_buttons_gtk3.ui  color.glade  dispctrl_bottom.glade  dispctrl_bottom_gtk3.ui  dispctrl_right.glade  dispctrl_right.ui  dispctrl_right_vertical.glade  dispctrl_right_vertical_gtk3.ui  main.glade  main_frame.glade  main_frame.ui  main_frame_hildon.glade  ng_view.glade  paper_view.glade  prefs.glade  prefs.ui  prefs_gtk3.ui  scientific_buttons.glade  scientific_buttons.ui  scientific_buttons_gtk3.ui
ui/: Makefile.am  Makefile.in  about.glade  about.ui.in  basic_buttons.glade  basic_buttons.ui  basic_buttons_gtk3.ui  classic_view.glade  dispctrl_bottom_gtk3.ui  dispctrl_right.glade  dispctrl_right_gtk3.ui  dispctrl_right_vertical.glade  dispctrl_right_vertical_gtk3.ui  font.glade  main_frame.glade  ng_view.glade  paper_view.glade  prefs-ume.glade  prefs.glade  prefs.ui  scientific_buttons.glade  scientific_buttons_gtk3.ui
