dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE([galculator], [1.3.5beta])
AM_MAINTAINER_MODE

AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_INTLTOOL(, no-xml)
AC_ISC_POSIX

AC_HEADER_STDC

pkg_modules="gtk+-2.0 >= 2.16.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

GETTEXT_PACKAGE=galculator
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [Name of gettext package])
AC_SUBST(GETTEXT_PACKAGE)

dnl Check for (f)lex
AM_PROG_LEX

AM_PROG_LIBTOOL

dnl Add the languages which your application supports here.
ALL_LINGUAS="de fr ja pt pt_BR pl ro sk es_MX ru"
AM_GLIB_GNU_GETTEXT

dnl If we don't have msgfmt, then po/ is going to fail -- ensure that
dnl AM_GLIB_GNU_GETTEXT found it (this is from the libpurple project)

if test x$MSGFMT = xno
then
        AC_ERROR([

The msgfmt command is required to build galculator.  If it is installed
on your system, ensure that it is in your path.  If it is not, install
GNU gettext to continue.
])
fi

dnl Use -Wall if we have gcc.
changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi
changequote([,])dnl

dnl m4/Makefile
AC_OUTPUT([Makefile
galculator.spec
src/Makefile
po/Makefile.in 
ui/Makefile
ui/about.ui
doc/Makefile
pixmaps/Makefile
])
