## Process this file with automake to produce Makefile.in

pixmapsdir = $(datadir)/pixmaps
pixmaps_DATA = galculator.xpm

# install icons to locations specified by xdg icon theme spec.
icontheme_scalabledir = $(datadir)/icons/hicolor/apps/scalable
icontheme_scalable_DATA = galculator.svg

icontheme_48x48dir = $(datadir)/icons/hicolor/apps/48x48
icontheme_48x48_DATA = galculator.png

EXTRA_DIST = $(pixmaps_DATA) \
	$(icontheme_scalable_DATA) \
	$(icontheme_48x48_DATA)


