## Process this file with automake to produce Makefile.in

uidir = $(datadir)/galculator/ui

ui_DATA = about.ui \
		prefs_gtk2.ui \
		prefs_gtk3.ui \
		prefs-ume.ui \
		main_frame.ui \
		main_frame_hildon.ui \
		scientific_buttons_gtk2.ui \
		scientific_buttons_gtk3.ui \
		basic_buttons_gtk2.ui \
		basic_buttons_gtk3.ui \
		dispctrl_bottom_gtk2.ui \
		dispctrl_bottom_gtk3.ui \
		dispctrl_right_gtk2.ui \
		dispctrl_right_gtk3.ui \
		dispctrl_right_vertical_gtk2.ui \
		dispctrl_right_vertical_gtk3.ui \
		classic_view.ui \
		paper_view.ui

EXTRA_DIST = $(ui_DATA)


