## Process this file with automake to produce Makefile.in

gladedir = $(datadir)/galculator/glade

glade_DATA = about.glade \
		color.glade \
		font.glade \
		prefs.glade \
		main_frame.glade \
		scientific_buttons.glade \
		basic_buttons.glade \
		dispctrl_bottom.glade \
		dispctrl_right.glade \
		dispctrl_right_vertical.glade

EXTRA_DIST = $(glade_DATA)


